# Atupa

./: .gitignore  Cargo.toml  atupa.toml  ethos.toml.example  publish.sh
.github/workflows/: release.yml  rust.yml
crates/atupa-aave/: Cargo.toml
crates/atupa-aave/src/: lib.rs
crates/atupa-adapters/src/: lib.rs
crates/atupa-core/src/: lib.rs
crates/atupa-nitro/: Cargo.toml
crates/atupa-nitro/src/: lib.rs
crates/atupa-output/src/: diff.rs  lib.rs
crates/atupa-parser/: Cargo.toml
crates/atupa-parser/examples/: trace_analysis.rs
crates/atupa-parser/src/: aggregator.rs  lib.rs
crates/atupa-rpc/src/: etherscan.rs  lib.rs
crates/atupa-sdk/: Cargo.toml
crates/atupa-sdk/src/: lib.rs
crates/ethos-cli/src/: main.rs
crates/ethos-cli/src/commands/: profile.rs
crates/ethos-core/: Cargo.toml
crates/ethos-core/src/: config.rs  lib.rs
crates/ethos-output/: Cargo.toml
crates/ethos-output/src/: lib.rs
crates/ethos-parser/src/: aggregator.rs
crates/ethos-rpc/src/: etherscan.rs
studio/public/: auto-load.json
studio/src/: App.tsx
studio/src/components/: CategoryBreakdown.tsx  DiffOverview.tsx  DragDropZone.tsx  MetricCard.tsx  TraceInspector.tsx
studio/src/styles/: design-system.css
studio/src/types/: trace.ts
