[workspace]
resolver = "2"
members = [
    "crates/ethos-cli",
    "crates/ethos-rpc",
    "crates/ethos-parser",
    "crates/ethos-core",
    "crates/ethos-adapters",
    "crates/ethos-output",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dean <ethos@eth-trace.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/One-Block-Org/Ethos"

[workspace.dependencies]
# CLI & Logging
clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
env_logger = "0.11.10"
indicatif = "0.18.4"
colored = "3.1.1"

# Async & Network
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }

# Template & Configuration
askama = "0.12.1"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.8.20"

# Internal Workspace
ethos-cli = { path = "crates/ethos-cli" }
ethos-rpc = { path = "crates/ethos-rpc" }
ethos-parser = { path = "crates/ethos-parser" }
ethos-core = { path = "crates/ethos-core" }
ethos-adapters = { path = "crates/ethos-adapters" }
ethos-output = { path = "crates/ethos-output" }
