[workspace]
resolver = "2"
members = [
    "crates/atupa",
    "crates/atupa-rpc",
    "crates/atupa-parser",
    "crates/atupa-core",
    "crates/atupa-adapters",
    "crates/atupa-output",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dean <ethos@eth-trace.io>"]
description = "Atupa: High-Fidelity Ethereum Tracing & Visual Profiling Suite"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/One-Block-Org/Atupa"
homepage = "https://atupa.eth-trace.io"
documentation = "https://docs.rs/atupa-core"
keywords = ["ethereum", "tracing", "evm", "profiler", "flamegraph"]
categories = ["development-tools", "visualization", "cryptography::cryptocurrencies"]

[workspace.dependencies]
# CLI & Logging
clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
env_logger = "0.11.10"
indicatif = "0.18.4"
colored = "3.1.1"

# Async & Network
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }

# Template & Configuration
askama = "0.15.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "1.1.2"

# Internal Workspace
atupa = { path = "crates/atupa", version = "0.1.0" }
atupa-rpc = { path = "crates/atupa-rpc", version = "0.1.0" }
atupa-parser = { path = "crates/atupa-parser", version = "0.1.0" }
atupa-core = { path = "crates/atupa-core", version = "0.1.0" }
atupa-adapters = { path = "crates/atupa-adapters", version = "0.1.0" }
atupa-output = { path = "crates/atupa-output", version = "0.1.0" }
