[package]
name = "atupa-aave"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = "DeepTracer: Aave v3 & GHO protocol adapter for the Atupa EVM profiling engine"
keywords = ["aave", "ethereum", "evm", "defi", "liquidation"]
categories = ["development-tools", "cryptography::cryptocurrencies"]

[dependencies]
atupa-core = { workspace = true }
atupa-adapters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
