[package]
name = "ethos-output"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ethos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
log = { workspace = true }
# SVG generation logic will be here
